Change password confirmation field to password type

--- a/project1/templates/register.html
+++ b/project1/templates/register.html
@@ -7,7 +7,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" required />
         <label for="password-conf">Confirm Password</label>
-        <input type="password-conf" name="password-conf" required />
+        <input type="password" name="password-conf" required />
         <button type="submit">Submit</button>
     </form>
     <a href="{{ url_for('login') }}">login</a>
