--- a/project1/templates/register.html
+++ b/project1/templates/register.html
@@ -8,6 +8,7 @@
         <input type="password" name="password" required />
         <label for="password-conf">Confirm Password</label>
         <input type="password" name="password-conf" required />
+        <p>{{ message }}</p>
         <button type="submit">Submit</button>
     </form>
     <a href="{{ url_for('login') }}">login</a>
