--- a/project1/templates/login.html
+++ b/project1/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <p>{{message}}</p>
     <form action="" method="POST">
         <label for="username">Username</label>
         <input type="text" name="username" placeholder="username" required/>
