Show reviews on book page

--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -5,4 +5,12 @@
     <p>Author: {{ book.author }}</p>
     <p>ISBN: {{ book.isbn }}</p>
     <p>Year: {{ book.year }}</p>
+
+    {% for review in reviews %}
+        <div>
+            <p>{{ review.reviewer }}</p>
+            <p>{{ review.content }}</p>
+            <p>{{ review.rating }}</p>
+        </div>
+    {% endfor %}
 {% endblock %}
