--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -6,6 +6,21 @@
     <p>ISBN: {{ book.isbn }}</p>
     <p>Year: {{ book.year }}</p>
 
+    <form action="" method="POST">
+        <label>opinion</label>
+        <textarea name="review_content"></textarea>
+        <label>rating</label>
+        <select name="rating">
+            <option option="0">0</option>
+            <option option="1">1</option>
+            <option option="2">2</option>
+            <option option="3">3</option>
+            <option option="4">4</option>
+            <option option="5">5</option>
+        </select>
+        <button type="submit">submit</button>
+    </form>
+
     {% for review in reviews %}
         <div>
             <p>{{ review.reviewer }}</p>
