--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -19,6 +19,7 @@
             <option option="5">5</option>
         </select>
         <button type="submit">submit</button>
+        <p>{{message}}</p>
     </form>
 
     {% for review in reviews %}
