Display average good reads review for a book

--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -5,6 +5,7 @@
     <p>Author: {{ book.author }}</p>
     <p>ISBN: {{ book.isbn }}</p>
     <p>Year: {{ book.year }}</p>
+    <p>Good Reads average rating: {{ gr_rating }}</p>
 
     <form action="" method="POST">
         <label>opinion</label>
