Impliment logout feature

--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <p>You're logged in!</p>
+    <a href="{{ url_for('logout') }}"><button>logout</button></a>
 {% endblock %}
