--- a/project2/templates/login.html
+++ b/project2/templates/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block header_content %}
+{% endblock %}
+
 {% block content %}
     <h1>Welcome to Flack!</h1>
     <p>Please provide a handle to use during your chats.</p>
