--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -36,9 +36,19 @@
 {% endblock %}
 
 {% block content %}
-    <p>You're logged in!</p>
-    <a href="{{ url_for('logout') }}"><button>logout</button></a>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">FLACK</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse align-self-end">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
     <div id="chat-log">
 
     </div>
