--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -37,7 +37,7 @@
 
 {% block content %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">FLACK</a>
+        <a class="navbar-brand" href="#">#{{ channel }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,7 +50,12 @@
         </div>
     </nav>
     <div id="chat-log">
+        {% for message in chatlog %}
+            <div>
+                <p>{{ message.sender }} says {{ message.message }}</p>
+            </div>
 
+        {% endfor %}
     </div>
 
     <form id="message-form">
