--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -58,8 +58,11 @@
         {% endfor %}
     </div>
 
-    <form id="message-form">
-        <input id="message" type=text name="message" placeholder="message">
-        <button type=submit>Send</button>
+    <form id="message-form" class="container">
+        <div class="row">
+            <input id="message" class="col-10" type=text name="message" placeholder="message">
+            <button class="col-2 btn btn-primary" type="submit">Send</button>
+        </div>
+
     </form>
 {% endblock %}
