--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -3,7 +3,8 @@
 {% block header_content %}
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    let socket = io.connect('http://' + document.domain + ':' + location.port);
+    let channel_name = getChannelName();
 
     socket.on('broadcast_message', function(data) {
         var chat_log = document.getElementById('chat-log');
@@ -26,11 +27,22 @@
         if (e.preventDefault) e.preventDefault();
 
         //get message
-        var message = document.getElementById('message');
+        var message_content = document.getElementById('message').value;
+        let message_data = {
+            message: message_content,
+            channel: channel_name,
+        }
 
         //send message to backend
-        socket.emit('message', {message : message.value})
+        socket.emit('message', message_data)
+
+        //clear form
+        message.value="";
         return false;
+    }
+
+    function getChannelName() {
+        return window.location.pathname.split("/").pop();
     }
 </script>
 {% endblock %}
@@ -51,9 +63,10 @@
     </nav>
     <div id="chat-log">
         {% for message in chatlog %}
-            <div>
-                <p>{{ message.sender }} says {{ message.message }}</p>
+            <div class="message">
+                {{ message.message }}
             </div>
+            <p class="text-right sender">{{ message.sender }}</p>
 
         {% endfor %}
     </div>
@@ -63,6 +76,5 @@
             <input id="message" class="col-10" type=text name="message" placeholder="message">
             <button class="col-2 btn btn-primary" type="submit">Send</button>
         </div>
-
     </form>
 {% endblock %}
