--- a/project2/static/message.css
+++ b/project2/static/message.css
@@ -6,14 +6,14 @@
     margin: 0;
 }
 
-.message {
+.message > .content {
     background-color: #f0f1f3;
     margin: 10px;
     border-radius: 10px;
     padding: 10px;
 }
 
-.sender {
+.message > .sender {
     margin-right: 10px;
     font-size: .75em;
 }
