--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -52,6 +52,7 @@
         message.classList.add('message');
         content_elm.classList.add('content');
         sender_elm.classList.add('sender');
+        sender_elm.classList.add('text-right');
 
         content_elm.innerHTML = content;
         sender_elm.innerHTML = sender;
@@ -65,7 +66,7 @@
 {% endblock %}
 
 {% block content %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">#{{ channel }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -86,12 +87,10 @@
             </div>
             <p class="text-right sender">{{ message.sender }}</p>
         </div>
-
-
         {% endfor %}
     </div>
 
-    <form id="message-form" class="container">
+    <form id="message-form" class="">
         <div class="row">
             <input id="message" class="col-10" type=text name="message" placeholder="message">
             <button class="col-2 btn btn-primary" type="submit">Send</button>
