Add method to scroll to latest message

--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -62,6 +62,10 @@
 
         return message;
     }
+
+    function scrollToLatestMessage() {
+        window.scrollTo(0,document.querySelector("#chat-log").scrollHeight);
+    }
 </script>
 {% endblock %}
 
