Add feature to display available channels from backend

--- a/project2/static/message.css
+++ b/project2/static/message.css
@@ -29,8 +29,25 @@
     margin-bottom: 1px;
     padding-left: 10px;
 }
-
+/*
 #chat-log {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    overflow-y: scroll;
+} */
+
+#sidebar {
+    margin-top: 4%;
+    padding-top: 10px;
+    border-right: solid;
+    height: 100vh;
+}
+
+#channels {
+    list-style: none;
+}
+
+.content {
     margin-top: 5%;
     margin-bottom: 5%;
     overflow-y: scroll;
