--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -17,6 +17,7 @@
         let new_channel = document.createElement('li');
         let link = document.createElement('a');
 
+        link.classList.add("channel_link");
         link.innerHTML = channel_name;
         link.href = '/messages/' + channel_name;
         new_channel.appendChild(link);
@@ -30,11 +31,18 @@
     });
 
     document.addEventListener("DOMContentLoaded", function() {
-        var form = document.getElementById('message-form');
+        let form = document.getElementById('message-form');
         if (form.attachEvent) {
             form.attachEvent("submit", processForm);
         } else {
             form.addEventListener("submit", processForm);
+        }
+
+        form = document.getElementById("add_channel_form");
+        if (form.attachEvent) {
+            form.attachEvent("submit", addProcessChannelForm);
+        } else {
+            form.addEventListener("submit", addProcessChannelForm);
         }
     });
 
@@ -55,6 +63,52 @@
         //clear form
         message.value="";
         return false;
+    }
+
+    function addProcessChannelForm(e) {
+        //stop page from refreshing
+        if (e.preventDefault) e.preventDefault();
+
+        //get new channel name
+        let new_channel_name = document.getElementById('channel_name').value;
+        const existing_channels = getAllExistingChannels();
+
+        if (existing_channels.indexOf(new_channel_name) !== -1) {
+            displayAddChannelError();
+            return;
+        }
+
+        let message_data = {
+            name: new_channel_name
+        }
+
+        //send message to backend
+        socket.emit('add_channel', message_data)
+
+        //redirect to new channel
+        redirectToChannel(new_channel_name);
+    }
+
+    function redirectToChannel(channel_name) {
+        const protocol = window.location.protocol;
+        const host = window.location.host;
+        window.location.href = protocol + "//" + host + "/messages/" + channel_name;
+    }
+
+    function displayAddChannelError() {
+        let elm = document.getElementById("add_channel_fail_alert");
+        elm.classList.remove("d-none");
+    }
+
+    function getAllExistingChannels() {
+        let links = document.getElementsByClassName('channel_link');
+        let names = []
+
+        for (let i = 0; i < links.length; i++) {
+            names.push(links[i].innerHTML);
+        }
+
+        return names;
     }
 
     function getChannelName() {
@@ -114,7 +168,7 @@
         <div id="sidebar" class="col-2 content">
             <ul id="channels">
                 {% for name in channel_names %}
-                    <li><a href="/messages/{{ name }}"> {{ name }}</a></li>
+                    <li><a class="channel_link" href="/messages/{{ name }}">{{ name }}</a></li>
                 {% endfor %}
             </ul>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addChannelFormModal">
@@ -130,8 +184,11 @@
                         <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <form>
+                    <form id="add_channel_form">
                         <div class="modal-body">
+                                <div id="add_channel_fail_alert" class="form-group row alert alert-danger d-none" role="alert">
+                                    A channel with that name already exists!
+                                </div>
                             <div class="form-group row">
                                 <label for="channel_name" class="col-sm-4 col-form-label">channel name: </label>
                                 <div class="col-sm-8">
