--- a/project2/templates/messages.html
+++ b/project2/templates/messages.html
@@ -70,11 +70,16 @@
         if (e.preventDefault) e.preventDefault();
 
         //get new channel name
-        let new_channel_name = document.getElementById('channel_name').value;
+        let new_channel_name = document.getElementById('channel_name').value.trim();
         const existing_channels = getAllExistingChannels();
 
+        if (new_channel_name.length == 0) {
+            displayAddChannelError("You must provide a channel name!");
+            return;
+        }
+
         if (existing_channels.indexOf(new_channel_name) !== -1) {
-            displayAddChannelError();
+            displayAddChannelError("A channel with that name already exists!");
             return;
         }
 
@@ -95,9 +100,10 @@
         window.location.href = protocol + "//" + host + "/messages/" + channel_name;
     }
 
-    function displayAddChannelError() {
+    function displayAddChannelError(msg) {
         let elm = document.getElementById("add_channel_fail_alert");
         elm.classList.remove("d-none");
+        elm.innerHTML = msg;
     }
 
     function getAllExistingChannels() {
@@ -187,7 +193,7 @@
                     <form id="add_channel_form">
                         <div class="modal-body">
                                 <div id="add_channel_fail_alert" class="form-group row alert alert-danger d-none" role="alert">
-                                    A channel with that name already exists!
+                                    <!-- will be rendered by js -->
                                 </div>
                             <div class="form-group row">
                                 <label for="channel_name" class="col-sm-4 col-form-label">channel name: </label>
