--- a/project2/static/message.css
+++ b/project2/static/message.css
@@ -5,8 +5,7 @@
     bottom: 0;
     margin: 0;
     width: 100%;
-    padding-bottom: 5px;
-    height: 7.5%;
+    height: 10%;
 }
 
 #message-form > * {
@@ -33,12 +32,19 @@
 #sidebar {
     margin-top: 4%;
     padding-top: 10px;
-    border-right: solid;
     height: 100vh;
+    background-color: #f0f1f3;
 }
 
 #channels {
     list-style: none;
+}
+
+#add_channel_btn {
+    margin:0 auto;
+    display:block;
+    width: 100%;
+    margin-left: 5px;
 }
 
 .content {
