--- a/project2/static/message.css
+++ b/project2/static/message.css
@@ -20,6 +20,8 @@
     background-color: #f0f1f3;
     border-radius: 10px;
     padding: 10px;
+    margin-top: 1px;
+    margin-bottom: 5px;
 }
 
 .message > .sender {
