--- a/project1/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/project1/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -5,8 +5,5 @@ Encyclopedia | {{ title }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ title }}</h1>
-
-    <p>TODO</p>
-
+    {{content |safe}}
 {% endblock %}
