--- a/project1/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/project1/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>All Pages</h1>
+    <h1>{{ title }}</h1>
 
     <ul>
         {% for entry in entries %}
