Fix form styling

--- a/project1/wiki/encyclopedia/templates/encyclopedia/create.html
+++ b/project1/wiki/encyclopedia/templates/encyclopedia/create.html
@@ -10,9 +10,11 @@
 
 
     <form method="POST">
-        {% csrf_token %}
-        {{ form |crispy }}
+        <div class="w-75">
+            {% csrf_token %}
+            {{ form |crispy }}
         <input type="submit" value="Submit">
+        </div>
     </form>
 
 {% endblock %}
