Render a prefilled form on the edit page

--- a/project1/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/project1/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -5,5 +5,8 @@ Encyclopedia | {{ title }}
 {% endblock %}
 
 {% block body %}
+    <div class="float-right">
+        <a href="{% url 'edit' title %}" class="">edit</a>
+    </div>
     {{content |safe}}
 {% endblock %}
