--- a/project2/commerce/auctions/templates/auctions/view_listing.html
+++ b/project2/commerce/auctions/templates/auctions/view_listing.html
@@ -11,7 +11,7 @@
 
         {% if user.is_authenticated %}
             {% load crispy_forms_tags %}  
-            <form method="POST" action="{% url 'create_bid' %}">
+            <form method="POST">
                 <div class="w-75">
                     {% csrf_token %}
                     {{ form | crispy }}
